# duck-advent

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  rustfmt.toml  tsconfig.json
advent-cache/: Cargo.toml
advent-cache/src/: lib.rs
advent-cache/tests/: cache_roundtrip.rs
advent-cli/: Cargo.toml
advent-cli/src/: main.rs
advent-cli/src/commands/: doctor.rs  init.rs  manifest.rs  mod.rs  next.rs  open.rs  prev.rs  repeat.rs  status.rs
advent-config/: Cargo.toml
advent-config/src/: lib.rs
advent-core/: Cargo.toml
advent-core/src/: config.rs  error.rs  lib.rs  manifest.rs  progress.rs
advent-pty/: Cargo.toml
advent-pty/src/: keys.rs  lib.rs  pane.rs  view.rs
advent-quest/: Cargo.toml
advent-quest/src/: git.rs  lib.rs  tests.rs
advent-tui/: Cargo.toml
advent-tui/src/: app.rs  confetti.rs  lib.rs  markdown.rs  nvim.rs  terminal.rs  workspace.rs
advent-tui/src/screens/: briefing.rs  celebrate.rs  complete.rs  dirty.rs  error.rs  hint.rs  install.rs  leaderboard.rs  mod.rs  notice.rs  running.rs  splash.rs  validators.rs  working.rs
config/: README.md  package.json  tsconfig.json
config/src/: constants.ts  index.ts  types.ts
src/: cli.ts  lib.ts  version.ts
src/cache/: install.ts  paths.ts  progress.ts  validators.ts
src/commands/: briefing.ts  doctor.ts  hint.ts  init.ts  next.ts  open.ts  reset.ts  status.ts
src/config/: define.ts  loader.ts  schema.ts
src/lib/: exec.ts  hash.ts  markdown.ts
src/quest/: docker.ts  git.ts  runner.ts
src/session/: layout.ts  popup.ts  status.ts  tmux.ts
src/tui/: App.tsx
src/tui/screens/: Briefing.tsx  Celebrate.tsx  Final.tsx  HintModal.tsx  Installing.tsx  Splash.tsx  Validating.tsx
src/types/: marked-terminal.d.ts
templates/: quest.config.ts.tmpl
tmux/: duck-quest.tmux.conf
