[package]
name = "advent-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
advent-core.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"
