[package]
name = "advent-pty"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
portable-pty.workspace = true
vt100-ctt.workspace = true
ratatui.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
crossterm.workspace = true
